plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

test {
    useJUnitPlatform()
    // jvmArgs += "--enable-preview"
}

version = '4.0.0'

tasks.withType(JavaCompile) {
    // options.compilerArgs += '-Xlint:preview'
    // options.compilerArgs += '--enable-preview'
    options.compilerArgs += '-Xlint:deprecation'
    // options.compilerArgs += '-Xlint:unchecked'
}

/*
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
 */

